# web-Scraping

./: .ebignore  .gcloudignore  .gitignore  .replit  MANIFEST.in  README.md  amplify-backend.yml  amplify-flask.yml  amplify-nginx.conf  amplify-redirects.json  amplify-specific.json  amplify-web.config  amplify.yml  app.json  app.py  app.yaml  application.py  appspec.yml  authenticated_linkedin_scraper.py  batch_linkedin_finder.py  build_spec.yml  buildspec.yml  dispatch.yaml  enhanced_linkedin_scraper.py  index.html  linkedin_enhanced_scraper.py  linkedin_finder.py  main.py  pyproject.toml  scraper.py  setup.py  start_server.py
.ebextensions/: 01_flask.config  01_python.config  02_packages.config  03_environment.config  04_wsgi_custom_script.config
amplify-hooks/: post-deploy.sh  pre-deploy.sh
attached_assets/: BUILD.txt  Pasted--DOCTYPE-html-html-lang-en-data-bs-theme-dark-head-meta-charset-UTF-8-met-1745923806756.txt  Pasted--DOCTYPE-html-html-lang-en-data-bs-theme-dark-head-meta-charset-UTF-8-meta-n-1745924633505.txt  Pasted--Okay-let-s-break-down-this-network-request-and-analyze-why-it-might-be-experiencing-delays-Pu-1745924581540.txt  Pasted--Skip-to-content-Files-Commands-Search-Packager-files-Config-files-SS-victoryvision99-vic-1745908022485.txt  Pasted-0-2025-04-29T04-23-51-074Z-INFO-Cloning-repository-git-github-com-ezhumalaisanjay-ExtractBu-1745900707925.txt  Pasted-Running-the-code-in-my-project-results-in-the-following-ed-content-from-Google-cache-INFO-enhan-1745898837858.txt  (+3 more)
routes/: __init__.py  api_routes.py  main_routes.py  scrape_routes.py
(+21 files in other folders)
