[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "LinkedIn Scraper - Extract structured business information from LinkedIn"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pip-tools>=7.4.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
]
